score layout bugfix

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -500,17 +500,9 @@ table {
   }
   .player-dot {
     background: none;
-    margin    : 5vh -2% 0;
+    margin    : 0 -2%;
     &.bounce {
       animation: bounce 1s ease-in-out 0s infinite;
-    }
-    .no-check,
-    .check {
-      position: absolute;
-      left    : 0;
-      right   : 0;
-      top     : 0;
-      bottom  : 0;
     }
     svg {
       width    : 100%;
